<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".Admin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="500px" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="109dp"
        android:orientation="horizontal"
        android:background="#efffd0">
        <Button
            android:id="@+id/continue_"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="continue"
            android:layout_below="@+id/list"  />

        <Button
            android:id="@+id/edit_"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="edit"
            android:layout_below="@+id/list"  />

        <Button
            android:id="@+id/delete_"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="delete"
            android:layout_below="@+id/list"  />


    </LinearLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/numero2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_numero"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_numero"
                android:imeOptions="actionUnspecified"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:orientation="horizontal"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/nom2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_nom"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_nom"
                android:imeOptions="actionUnspecified"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:orientation="horizontal"/>

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


</RelativeLayout>